modify the Dockerfile